<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_invoke_unique_observer_surviving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invoke Unique Observer (Surviving)" />

    <TextView
        android:id="@+id/tv_target_unique_surviving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unique Update Count 0"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_invoke_unique_observer_not_surviving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Invoke Unique Observer (Not Surviving)"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/tv_target_unique_not_surviving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Unique Update Count 0"
        android:layout_marginTop="16dp" />

</LinearLayout>
